fixed overflow of CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Bangers', cursive;
-
-
-
 }
 h1 {
     font-family: 'Bangers', cursive;
@@ -25,11 +30,6 @@ h1 {
     color: aliceblue;
 }
 
-#chars {
-    text-decoration: none;
-    color: aliceblue;
-    
-}
 .links {
     text-decoration: none;
     color: aliceblue;
